+search_implementation: bars overflow fixed

--- a/src/views/style.css
+++ b/src/views/style.css
@@ -14,6 +14,7 @@
 
 
 .container{
+    width: auto;
     display: flex;
     justify-content: center;
 
